[문서] 개발 일지 및 시스템 아키텍처 추가

--- a/doc/개발 일지.md
+++ b/doc/개발 일지.md
@@ -246,3 +246,41 @@ else {
 return StatisticsService.getStatistics(Optional.Empty()); 
 ```
 
+# 2021년 9월 5일 개발 일지
+
+### 옷장 목록 가져오기 API에 다음과 같이 페이징 로직을 추가하였다. 
+```java
+List<Wardrobe> findAll(int pageNumber, int pageSize) {
+    PageRequest pageRequest = Pageable.of(pageNumber-1, pageSize);
+    Page<Wardrobe> result = wardrobeRepository.findAll(pageRequest); 
+    return result.getContents();
+}
+```
+Spring Data에서 Page라는 클래스를 통해 페이징 기능을 제공한다. 
+단순히 우리는 페이지 Idx와 페이지 당 아이템 개수를 넘겨주기만 하면 다양한 정보를 다음과 같이 Page 객체를 통해 제공한다.
+
+```java
+wardrobePage.getTotalPages(); // 총 페이지 수
+wardrobePage.getNumber(); // 페이지 Idx
+wardrobePage.getSize(); // 페이지 당 최대 아이템 수
+wardrobePage.getTotalElements(); // 전체 아이템 수
+wardrobePage.isLast(); // 마지막 페이지 여부 
+wardrobePage.isFirst(); // 첫번째 페이지 여부 
+```
+
+> ###참고) 
+> Page 클래스에서 page Idx는 0부터 시작한다. 
+
+### 절대로 Entity를 API DTO로 사용하지 말자 
+이전에도 언급한 내용인데 내용을 추가 해야할 것 같아 다시 작성한다. 만약에 응답해야할 Entity가 어떤 Entity와 상호 의존한다고 가정하자. 
+만약 이를 DTO로 사용하여 응답하게 되면 뫼비우스 띠처럼 서로를 계속 호출하는 끔찍한 상황을 맞이할 수 있다.
+따라서 API DTO로 Entity 자체를 절대로 사용하지 말자.
+
+## 2021년 9월 7일 개발 일지 
+Nginx를 고려해보자. -> 정적 파일을 처리할 수 있는 웹서버를 구성하자 + 무중단 배포 환경을 구성해보자. <br/>
+AWS도 고려해보자. -> 24시간 서버 운영을 고려해보자. <br/>
+고려해본 시스템 아키텍처는 다음과 같다. (이 아키텍처는 be gone, vegan에서 더 발전시켜 봐야 겠다.)
+
+![img.png](SystemArchitecture.png)
+
+어느정도 개발이 마무리 되었으니 우선 환경부터 구성해야 겠다. 
