[문서] 서버 내부 아키텍처 및 개발 일지 작성

--- a/doc/개발 일지.md
+++ b/doc/개발 일지.md
@@ -276,7 +276,7 @@ wardrobePage.isFirst(); // 첫번째 페이지 여부
 만약 이를 DTO로 사용하여 응답하게 되면 뫼비우스 띠처럼 서로를 계속 호출하는 끔찍한 상황을 맞이할 수 있다.
 따라서 API DTO로 Entity 자체를 절대로 사용하지 말자.
 
-## 2021년 9월 7일 개발 일지 
+## 2021년 9월 6일 개발 일지 
 Nginx를 고려해보자. -> 정적 파일을 처리할 수 있는 웹서버를 구성하자 + 무중단 배포 환경을 구성해보자. <br/>
 AWS도 고려해보자. -> 24시간 서버 운영을 고려해보자. <br/>
 고려해본 시스템 아키텍처는 다음과 같다. (이 아키텍처는 be gone, vegan에서 더 발전시켜 봐야 겠다.)
@@ -284,3 +284,50 @@ AWS도 고려해보자. -> 24시간 서버 운영을 고려해보자. <br/>
 ![img.png](SystemArchitecture.png)
 
 어느정도 개발이 마무리 되었으니 우선 환경부터 구성해야 겠다. 
+
+## 2021년 9월 7일 개발 일지 
+많은 고민을 한 하루였다. 
+나는 분명히 RestFul한 API를 목표로 개발하고 있었는데, 어느 순간 Restful 하지 않은 API가 개발 되어 가고 있는 것이였다. 
+
+내가 이런 고민을 하게 된 이유 중 가장 큰 부분은 무작정 서버 사이드 렌더링을 기준으로 구현을 하다보니, Response에 포함되는 DTO에 수많은 Object들이 포함되기 
+시작 했고, 그렇다 보니 무한 체이닝(?) 현상이 발생하기 시작했다.
+
+예를 들어 대충 표현하자면  
+```json 
+a {
+ b {
+  c {
+  }
+ }
+}
+```
+이런 식으로 JSON 객체가 다른 JSON 객체를 포함하고 또 다른 JSON 객체를 포함하고.... 굉장히 지저분하고 직관적이지 않은 JSON이 반환되는 것이였다.
+이것은 절대로 옳지 않다는 생각이 들었다.
+
+그래서 우선 Restful에 대해 학습하였다. 
+
+```text
+1. 요청 간에 클라이언트의 정보를 포함하지 않는다. Stateless 하다. 
+2. 서버-클라이언트 구조를 지킨다. Server는 API를 제공하고 Client는 사용자 인증이나 Context를 직접 관리한다.
+3. 캐시 처리가 가능해야 한다.
+4. Client는 REST API만 호출한다. API Server는 그로 인해 순수 비즈니스 로직만을 수행하며 그 앞단에 보안, 로드밸런싱, 암호화, 사용자 인증 등을 추가할 수 있다.
+5. 인터페이스를 일관화 한다.
+```
+
+1번. Stateless.. 지켜지지 않고 있다.  <br/>
+2번. Server에서 모든 Session을 관리하고 있다. <br/>
+3번. 캐시 처리..? 공부 해보자.  <br/>
+4번. 당연히 지켜지지 않고 있다. Client가 Service Logic을 직접 호출하는 경우도 있다. <br/>
+5번. 이 부분은 계속 지켜보자. 
+
+아무것도 안지켜지고 있는 처참한 결과로 인해.. FE 부분과 DTO를 싹다 뒤엎기로 했다. <br/>
+DTO는 정말 필요한 데이터만 Client에 제공하도록 하고. Client는 ajax로 API Server만 호출함으로서 클라이언트를 완성시킨다. 
+
+**생각한 내부 구조는 다음과 같다.**
+![img.png](SystemArchitecture2.png)
+
+1. Client는 정적 파일들(HTML, CSS, JS)을 웹서버로 가져온 후 AJAX로 REST API를 호출하게 된다. <br/>
+2. Server는 요청이 오게 되면 주요 로직을 수행한 후 얻어낸 데이터를 JSON 형태로 응답한다. 
+3. Client는 응답 데이터들을 받아 정적인 화면에 데이터를 뿌려준다.
+
+
