[문서] 게발 일지 작성

--- a/doc/개발 일지.md
+++ b/doc/개발 일지.md
@@ -281,7 +281,7 @@ Nginx를 고려해보자. -> 정적 파일을 처리할 수 있는 웹서버를 
 AWS도 고려해보자. -> 24시간 서버 운영을 고려해보자. <br/>
 고려해본 시스템 아키텍처는 다음과 같다. (이 아키텍처는 be gone, vegan에서 더 발전시켜 봐야 겠다.)
 
-![img.png](SystemArchitecture.png)
+![img.png](design/SystemArchitecture.png)
 
 어느정도 개발이 마무리 되었으니 우선 환경부터 구성해야 겠다. 
 
@@ -324,10 +324,35 @@ a {
 DTO는 정말 필요한 데이터만 Client에 제공하도록 하고. Client는 ajax로 API Server만 호출함으로서 클라이언트를 완성시킨다. 
 
 **생각한 내부 구조는 다음과 같다.**
-![img.png](SystemArchitecture2.png)
+![img.png](design/SystemArchitecture2.png)
 
 1. Client는 정적 파일들(HTML, CSS, JS)을 웹서버로 가져온 후 AJAX로 REST API를 호출하게 된다. <br/>
 2. Server는 요청이 오게 되면 주요 로직을 수행한 후 얻어낸 데이터를 JSON 형태로 응답한다. 
 3. Client는 응답 데이터들을 받아 정적인 화면에 데이터를 뿌려준다.
+
+# 2021년 9월 7일 개발 일지 
+위에서 무조건 AJAX로 호출해야지! 라고 결심했는데 이게 무조건 옳은 걸까? <br/>
+CSR과 SSR 중에 무조건 선택해야 할까?  <br/>
+둘 다 혼용해서 사용하는게 맞지 않을까?  <br/>
+
+<br/>
+
+![img.png](CSR%20vs%20SSR.png)
+
+<br/> 
+
+CSR만 활용하게 되면 사용자가 첫 로딩시에 빈 페이지를 보게 될수도 있다. <br/>
+SSR은 서버에서 뚝딱 뚝딱 만들어서 정적 페이지로 브라우저에게 던져준다. 그러면 뭔가 요청이 일어날 때마다 새로고침이 일어나게 된다. <br/> 
+
+<br/> 
+
+역시 같이 사용하는 방법이 맞는 것 같다. 처음에 로딩은 SSR로 진행한 후에 좋아요, 댓글 작성과 같이 사용자가 자주 이용하는 
+기능은 CSR을 이용하여 사용성을 증가시켜야 겠다. 
+
+정리하자면 
+첫 페이지 로드 : SSR <br/>
+화면이 자주 변경되거나, 자주 요청되는 부분 : CSR 
+
+확정!
 
 
