[문서] 개발 일지 작성

--- a/doc/개발 일지.md
+++ b/doc/개발 일지.md
@@ -276,7 +276,7 @@ wardrobePage.isFirst(); // 첫번째 페이지 여부
 만약 이를 DTO로 사용하여 응답하게 되면 뫼비우스 띠처럼 서로를 계속 호출하는 끔찍한 상황을 맞이할 수 있다.
 따라서 API DTO로 Entity 자체를 절대로 사용하지 말자.
 
-## 2021년 9월 6일 개발 일지 
+# 2021년 9월 6일 개발 일지 
 Nginx를 고려해보자. -> 정적 파일을 처리할 수 있는 웹서버를 구성하자 + 무중단 배포 환경을 구성해보자. <br/>
 AWS도 고려해보자. -> 24시간 서버 운영을 고려해보자. <br/>
 고려해본 시스템 아키텍처는 다음과 같다. (이 아키텍처는 be gone, vegan에서 더 발전시켜 봐야 겠다.)
@@ -285,7 +285,7 @@ AWS도 고려해보자. -> 24시간 서버 운영을 고려해보자. <br/>
 
 어느정도 개발이 마무리 되었으니 우선 환경부터 구성해야 겠다. 
 
-## 2021년 9월 7일 개발 일지 
+# 2021년 9월 7일 개발 일지 
 많은 고민을 한 하루였다. 
 나는 분명히 RestFul한 API를 목표로 개발하고 있었는데, 어느 순간 Restful 하지 않은 API가 개발 되어 가고 있는 것이였다. 
 
@@ -406,3 +406,48 @@ Response Parameters는 다음과 같다.
 > 이런식으로 설계하면 Controller와 Service단은 완벽하게 독립적인 관계를 유지할 수 있을 것이다.
 > Entity는 무조건 Service 단에서 마무리 하자 :) 
 
+#2021년 9월 21일 개발일지
+오늘도 무한 사이클 문제를 발견해서 수정했다. 
+`ContentForCloth` DTO 클래스에 `Image` 클래스가 포함되어 있었다. 
+
+초반부터 API 설계를 제대로 알지도 못하는 상태에서 하다보니 고칠게 끝도 없는 것 같다. 
+다음부터는 설계를 확실히 하자! 
+
+`PaginatedResponse` DTO를 만들어 반환하는 로직을 분리하였다.
+예를 들어서 
+```java
+        List<ContentForCloth> clothes = new ArrayList<>();
+        ResponseForClothes responseForClothes = new ResponseForClothes();
+
+        for(Cloth cloth : paginatedClothes.getContent()) {
+            clothes.add(new ContentForCloth(cloth));
+        }
+
+        responseForClothes.set_code(200);
+        responseForClothes.set_message("OK");
+        responseForClothes.setContents(clothes);
+        responseForClothes.setTotalPages(paginatedClothes.getTotalPages());
+        responseForClothes.setPageNumber(paginatedClothes.getNumber());
+        responseForClothes.setSize(paginatedClothes.getSize());
+        responseForClothes.setNumberOfElements(clothes.size());
+        responseForClothes.setTotalElements(paginatedClothes.getTotalElements());
+        responseForClothes.setIsLast(paginatedClothes.isLast());
+        responseForClothes.setIsFirst(paginatedClothes.isFirst());
+
+        return new ResponseEntity<>(responseForClothes, HttpStatus.OK);
+```
+위 로직은 `Cloth` 리스트를 반환할 때 `PaginatedCloth` DTO를 만들어 반환하는 로직인데 위 로직이 반복되면 코드가 쓸데 없이 
+길어지는 상황이 발생해 아예 Page 처리만 담당하는 `PaginationService` 클래스를 만들어 분리하였다.
+
+```java
+    @Transactional
+        PageRequest pageRequest = PageRequest.of(pageNumber-1, pageSize);
+        Page<Cloth> paginatedClothes = clothRepository.findAll(pageRequest);
+
+        return paginationService.convertToPaginatedClothes(paginatedClothes);
+```
+
+위 코드가 리팩토링을 완료한 코든데 굉장히 간결해진 것을 확인할 수 있다.
+최대한 클래스에는 한 가지의 책임만 주어져야 코드가 확실히 깔끔해지는 것 같다. 
+그리고 모든 리스트 반환 로직들을 페이징 처리를 하도록 수정하고 있는데 `Cloth` 리스트 반환에도 적용하였다. 
+수십, 수백만개의 데이터를 반환할 때 한번에 하게 되면 성능에 문제가 발생 할수도 있으니 최대한 페이징 처리는 하도록 하자!
