[문서] 개발 일지 작성

--- a/doc/개발 일지.md
+++ b/doc/개발 일지.md
@@ -451,3 +451,123 @@ Response Parameters는 다음과 같다.
 최대한 클래스에는 한 가지의 책임만 주어져야 코드가 확실히 깔끔해지는 것 같다. 
 그리고 모든 리스트 반환 로직들을 페이징 처리를 하도록 수정하고 있는데 `Cloth` 리스트 반환에도 적용하였다. 
 수십, 수백만개의 데이터를 반환할 때 한번에 하게 되면 성능에 문제가 발생 할수도 있으니 최대한 페이징 처리는 하도록 하자!
+
+# 2021년 9월 19일 개발일지
+한동안 개발 일지를 작성하지 못해서 일주일 동안 진행한 사항에 대해 작성하겠다. 
+소스 코드의 가장 큰 변화는 '댓글 기능', '좋아요 기능'에 대한 리팩토링 과정이다. 
+
+원래 Wardrobe, Record, Cloth 세 개의 엔티티는 동일하게 '댓글 기능'과 '좋아요 기능'을 가지고 있었다. 
+이를 구현하기 위해 댓글 관련 엔티티인 Comment와 좋아요 관련 엔티티인 Like는 Wardrobe, Record, Cloth의 id를 모두 가지고 있었고 
+Wardrobe, Record, Cloth는 동일하게 Comment, Like와 관련된 로직을 포함하고 있었다. 
+
+이는 굉장히 안좋은 상황을 유발했다. 각각 Wardrobe, Record, Cloth 관련 비즈니스 로직을 가지고 있는 Service에 일일히 기능을 추가 시켜줘야 했고
+만약 댓글 기능과 좋아요 기능의 전체적인 로직이 변화하면 세 개의 Service를 수정해야 하는 상황이 발생했다. 
+그리고 만약에 후에 댓글 기능과 좋아요 기능을 가진 엔티티를 추가한다면 로직을 또 다시 추가해줘야하고 기존의 엔티티들의 변화도 발생하는 
+객체 지향적으로 굉장히 안좋은 설계였다. 
+
+사실 이는 공통된 역할을 빼내어 상위 인터페이스로 분리시켜주면 중복 코드도 사라지고, 변화도 최대한 방지할 수 있다. 하지만 
+Hibernate Entity는 관계형 데이터베이스를 위한 것이기 때문에 당연히 상속관계가 존재하지 않을 것이라 판단했었다. 
+
+하지만 이에 대하여 검색해보니 Hibernate는 이러한 관계를 표현하기 위해 상속 전략이라는 개념을 제공한다. 
+관계형 데이터베이스에는 상속 관계는 존재하지 않지만 슈퍼 타입과 서브 타입이라는 관계가 존재한다. 이러한 관계를 상속 관계로 
+표현하기 위한 전략이 바로 상속 전략이다. 
+
+상속 전략은 다음과 같이 내 블로그에 정리했다. 참고하면 된다. <br/>
+
+[Hibernate JPA에서 상속 구조는 어떻게 표현할 수 있을까?](https://ybdeveloper.tistory.com/101)
+
+하여튼 결론만 말하면 상속 전략을 적용시켜 리팩토링을 완료할 수 있었다. 
+기존에는 ClothService, RecordService, WardrobeService에 중복되던 로직들을 다음과 같이 PostService로 이관시켰다.
+
+```java
+   @Transactional
+    public ResponseEntity<Response> changeLikeCnt(Long id, SessionMember sessionMember) {
+        Member member = customOAuth2MemberService.getMemberBySession(sessionMember);
+        PostEntity post = postRepository.findById(id)
+                .orElseThrow(() -> new BadRequestException("잘못된 요청 입니다."));
+        Optional<Like> like = likeRepository.findByMember_IdAndPost_Id(member.getId(), id);
+
+        if(like.isEmpty()) {
+            post.changeLikeCnt(new Like(member, post), MethodType.ADD);
+        }
+        else {
+            post.changeLikeCnt(like.get(), MethodType.DELETE);
+        }
+
+        Response response = new Response();
+        response.set_code(200);
+        response.set_message("OK");
+
+        return new ResponseEntity<>(response, HttpStatus.OK);
+    }
+
+    public ResponseEntity<ResponseForLike> isLikeUsers(Long postId, Long memberId) {
+        Optional<Like> like = likeRepository.findByMember_IdAndPost_Id(memberId, postId);
+        ResponseForLike response;
+
+        if(like.isEmpty()) {
+            response = new ResponseForLike(false);
+        }
+        else {
+            response = new ResponseForLike(like.get(), true);
+        }
+
+        response.set_code(200);
+        response.set_message("OK");
+
+        return new ResponseEntity<>(response, HttpStatus.OK);
+    }
+
+    public ResponseEntity<ResponseForComments> findCommentsByPostId(Long postId, int pageNumber, int pageSize) {
+        PageRequest pageRequest = PageRequest.of(pageNumber-1, pageSize);
+        Page<Comment> paginatedComments = commentRepository.findCommentsByPostId(pageRequest, postId);
+
+        return paginationService.convertToPaginatedComments(paginatedComments);
+    }
+
+    @Transactional
+    public ResponseEntity<Response> writeComment(Long postId, SessionMember sessionMember, RequestForCommentSave commentSaveRequestDto) {
+        PostEntity post = postRepository.findById(postId)
+                .orElseThrow(() -> new BadRequestException("잘못된 요청 입니다."));
+        Member member = customOAuth2MemberService.getMemberBySession(sessionMember);
+
+        post.writeComment(commentSaveRequestDto.toEntity(member));
+
+        Response response = new Response();
+        response.set_code(200);
+        response.set_message("OK");
+
+        return new ResponseEntity<>(response, HttpStatus.OK);
+    }
+
+    /**
+     * 댓글을 삭제한다.
+     */
+    @Transactional
+    public ResponseEntity<Response> deleteComment(Long postId, Long commentId, SessionMember sessionMember) {
+        PostEntity post = postRepository.findById(postId).orElseThrow(() -> new BadRequestException("잘못된 요청 입니다."));
+        Comment comment = commentRepository.findById(commentId).orElseThrow(() -> new BadRequestException("잘못된 요청 입니다."));
+
+        checkService.confirmRightApproach(sessionMember.getEmail(), comment.getMember().getEmail());
+
+        post.deleteComment(comment);
+
+        Response response = new Response();
+        response.set_code(200);
+        response.set_message("OK");
+
+        return new ResponseEntity<>(response, HttpStatus.OK);
+    }
+```
+
+이제 댓글 기능과 좋아요 기능을 추가가 필요한 엔티티가 존재한다면 
+단순히 해당 엔티티가 `PostEntity`를 상속 받으면 된다. 
+
+```java
+@DiscriminatorValue("NewEntity")
+public class NewEntity extends PostEntity {
+}
+```
+
+그리고 단순히 해당 PostService에 존재하는 비즈니스 로직을 호출하면 된다. :) <br/>
+API 관점에서도 각각 개발자들은 댓글 기능과 좋아요 기능을 개발 하기 위해 post 관련 api만 호출하면 되기 때문에 굉장히 효율적이라고 생각한다.
