[문서] 개발 일지 작성

--- a/doc/개발 일지.md
+++ b/doc/개발 일지.md
@@ -571,3 +571,47 @@ public class NewEntity extends PostEntity {
 
 그리고 단순히 해당 PostService에 존재하는 비즈니스 로직을 호출하면 된다. :) <br/>
 API 관점에서도 각각 개발자들은 댓글 기능과 좋아요 기능을 개발 하기 위해 post 관련 api만 호출하면 되기 때문에 굉장히 효율적이라고 생각한다.
+
+# 2021년 9월 26일 개발일지
+불현듯 그런 생각이 들었다.
+누구나 API에 접근할 수 있다면 데이터를 마음대로 망가트릴 수 있다는 것을...
+
+그래서 한동안 API 보안에 대해 뒤적 뒤적 거렸던 것 같다. 
+그 결과 내가 가장 먼저 선택할 수 있는 방향은 API Key 였다.
+
+일단 우선 구현한 방법은 다음과 같이 Custom Filter를 만들어서 클라이언트 request header에 들어가 있는 Api Key를 꺼내어
+검증하는 방법이였다.
+```java
+    @Override
+    public void doFilter(ServletRequest request, ServletResponse response, FilterChain chain) throws IOException, ServletException {
+        HttpServletRequest httpServletRequest = (HttpServletRequest) request;
+
+        try {
+            if (!httpServletRequest.getHeader(principalRequestHeader).equals(principalRequestValue)) {
+                throw new ApiKeyInvalidException("api key is invalid");
+            }
+        } catch (NullPointerException e) {
+            throw new ApiKeyInvalidException("api key not found");
+        }
+
+        chain.doFilter(request, response);
+    }
+```
+
+만약 Api key가 없거나, 틀렸다면 Exception이 발생하고 ExceptionHanlderFilter에 의해 
+JSON으로 변환되어 응답이 나가게 된다. 
+
+Filter는 다음과 같이 등록했다.
+```java
+    @Bean
+    public FilterRegistrationBean<Filter> apiKeyFilter() {
+        FilterRegistrationBean<Filter> filterRegistrationBean = new FilterRegistrationBean<>();
+        filterRegistrationBean.setFilter(new ApiAuthFilter());
+        filterRegistrationBean.setOrder(2);
+        filterRegistrationBean.addUrlPatterns("/api/v1/*");
+
+        return filterRegistrationBean;
+    }
+```
+
+일단 구현은 했는데 아직 불안하다. 좀 더 찾아봐야겠다. 
