--- a/doc/개발 일지.md
+++ b/doc/개발 일지.md
@@ -614,4 +614,153 @@ Filter는 다음과 같이 등록했다.
     }
 ```
 
-일단 구현은 했는데 아직 불안하다. 좀 더 찾아봐야겠다. 
+일단 구현은 했는데 아직 만족스럽지 않다. 좀 더 찾아봐야겠다. 
+
+# 2021년 9월 29일 개발일지 
+오늘은 API KEY 인증 부분 수정과 Log Interceptor 부분을 수정했다.
+
+우선 API KEY 인증 부분은 API 관련 Field들을 application.properties로 이동시켰고
+아래와 같이 @ConfigurationProperties를 통해 Properties 클래스에 필드를 매핑시켰다.
+
+```properties
+#authorization 설정
+wardrobe.auth_header=
+wardrobe.auth_value=
+```
+
+```java
+@Data
+@Component
+@ConfigurationProperties(prefix = "wardrobe")
+public class AuthorizationProperties {
+    private String auth_header;
+    private String auth_value;
+}
+```
+
+prefix는 application.properties에서 최상단 공통 부분을 매핑시켜주면 되고 
+필드는 그 뒤에 이어질 서로 다른 부분을 입력시켜주면 된다.
+SpringBoot 2.2부터는 List나 Class를 이용하여 depth를 표현할 수 있다고 한다. 
+예를들어 auth_value.jwt_token이라면 아래와 같이 표현할 수 있다.
+
+```java
+@Data
+@Component
+@ConfigurationProperties(prefix = "wardrobe")
+public class AuthorizationProperties {
+    private String auth_header;
+    private Auth auth_value;
+}
+
+public class Auth {
+    private String jwt_token; 
+}
+```
+
+하여튼 properties를 설정함으로써 원래 Filter에 하드코딩 되어 있었던 API KEY 관련 필드들을 치울 수 있었다. 
+
+```java
+@Component
+public class ApiAuthorizationFilter implements Filter {
+
+    @Autowired
+    private AuthorizationProperties authorizationProperties;
+
+    @Override
+    public void doFilter(ServletRequest request, ServletResponse response, FilterChain chain) throws IOException, ServletException {
+        HttpServletRequest httpServletRequest = (HttpServletRequest) request;
+
+        try {
+            if (!httpServletRequest.getHeader(authorizationProperties.getAuth_header()).equals(authorizationProperties.getAuth_value())) {
+                throw new ApiKeyInvalidException("api key is invalid");
+            }
+        } catch (NullPointerException e) {
+            throw new ApiKeyInvalidException("api key not found");
+        }
+
+        chain.doFilter(request, response);
+    }
+}
+```
+
+```text
+autowired members must be defined in valid spring bean 
+```
+
+위에 Api key Authorization 부분을 수정하면서 맞닥드린 오류인데, 간단한 오류이다. 
+특정 필드를 주입받는 클래스 또한 Spring Bean이여야만 한다. (당연한 것이다. 주입받는 것은 의존성 주입이라고 할 수 있는데 런타임에 생성도 안된 클래스에 의존성을 주입한다..? 이상한 것이다.)
+
+다음으로 Logging FIlter를 개발했다. 
+이번에는 더 나아가 Request Body도 기록하기 위해서 재활용할 수 있는 Response, Request 넘겨줄 수 있도록하는 Filter를 개발하였다. 
+```java
+public class CustomServletWrappingFilter extends OncePerRequestFilter {
+
+    @Override
+    protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain filterChain) throws ServletException, IOException {
+        ContentCachingRequestWrapper wrappingRequest = new ContentCachingRequestWrapper(request);
+        ContentCachingResponseWrapper wrappingResponse = new ContentCachingResponseWrapper(response);
+
+        filterChain.doFilter(wrappingRequest, wrappingResponse);
+        wrappingResponse.copyBodyToResponse();
+    }
+}
+```
+
+참고로 HttpServletRequest, HttpServletResponse 객체는 stream을 통해 body를 읽게되면 더 이상 읽지 못한다. 즉, 1회용이란 의미이다.
+따라서 body를 logging 하기 위해서는 여러번 읽을 수 있는 커스터마이징된 Request, Response 객체를 넘겨줘야 한다. 
+위의 Filter가 그 역할을 한다! 
+
+하여튼 로깅 인터셉터는 뒤를 이어서 Logging을 위한 객체에 파싱을 하여 매핑한 후 
+LoggingRepository를 통해 DB에 로그를 저장한다! 
+
+```java
+@Log4j2
+@Component
+@RequiredArgsConstructor
+public class LogInterceptor implements HandlerInterceptor {
+
+    private final ObjectMapper objectMapper;
+
+    @Autowired
+    private RequestLogRepository requestLogRepository;
+
+    SimpleDateFormat dateFormat = new SimpleDateFormat("yyyy-MM-dd HH:mm:ss");
+
+    @Override
+    public boolean preHandle(HttpServletRequest request, HttpServletResponse response, Object handler) throws Exception {
+        // requestLog 객체를 생성하여 매핑한 후 DB에 저장한다.
+        requestLogRepository.save(requestLog);
+
+        return true;
+    }
+
+    @Override
+    public void postHandle(HttpServletRequest request, HttpServletResponse response, Object handler, ModelAndView modelAndView) throws Exception {
+    }
+
+    @Override
+    public void afterCompletion(HttpServletRequest request, HttpServletResponse response, Object handler, Exception ex) throws Exception {
+     // request- body 를 매핑하여 DB에 존재하는 Log를 수정한다.
+     if(request.getHeader("Content-Type") != null && request.getHeader("Content-Type").equals("application/json; charset=UTF-8")) {
+            final ContentCachingRequestWrapper cachingRequest = (ContentCachingRequestWrapper) request;
+            final ContentCachingResponseWrapper cachingResponse = (ContentCachingResponseWrapper) response;
+
+            Optional<RequestLog> log = requestLogRepository.findById(request.getAttribute("ReqId").toString());
+            log.ifPresent(selectLog -> {
+                try {
+                    Date now = new Date();
+                    selectLog.setResTime(Timestamp.valueOf(dateFormat.format(now)));
+                    selectLog.setBody(objectMapper.readTree(cachingRequest.getContentAsByteArray()).toString());
+                    selectLog.setResponseMsg(objectMapper.readTree(cachingResponse.getContentAsByteArray()).toString());
+                    requestLogRepository.save(selectLog);
+                } catch (IOException e) {
+                    e.printStackTrace();
+                }
+            });
+        }
+    }
+}
+```
+
+아 그리고 로그인터셉터를 구현하며 발생한 오류인데 Bean 끼리는 절대로 이름이 중복되면 안된다. 
+물론 허용할 수 있도록 설정을 바꾸면 되긴 하지만 일단은 Bean의 이름이 중복되면 `BeanDefinitionOverrideException`이 발생한다.
