[문서] 개발 일지 작성

--- a/doc/개발 일지.md
+++ b/doc/개발 일지.md
@@ -764,3 +764,12 @@ public class LogInterceptor implements HandlerInterceptor {
 
 아 그리고 로그인터셉터를 구현하며 발생한 오류인데 Bean 끼리는 절대로 이름이 중복되면 안된다. 
 물론 허용할 수 있도록 설정을 바꾸면 되긴 하지만 일단은 Bean의 이름이 중복되면 `BeanDefinitionOverrideException`이 발생한다.
+
+# 2021년 9월 29일 개발일지  
+
+1. 클라이언트에서 Google 로그인을 통해 인증이 완료되면 메일 정보를 서버에게 전송한다. 
+2. 서버는 메일 정보를 받아 인증을 진행한 후 확인이 되면 Jwt Token을 응답한다. 
+3. 클라이언트는 Jwt Token을 헤더에 포함시켜 서버에게 요청을 수행한다.
+
+
+
