--- a/doc/개발 일지.md
+++ b/doc/개발 일지.md
@@ -772,4 +772,11 @@ public class LogInterceptor implements HandlerInterceptor {
 3. 클라이언트는 Jwt Token을 헤더에 포함시켜 서버에게 요청을 수행한다.
 
 
+# 2021년 11월 5일 개발일지 
+1. 불현듯 꺠달았다. 내가 REST API에 대한 의미를 잘못 알고 있었다는 것을...
+2. 내가 이 프로젝트에서 사용한건 API지, REST API가 아니다. 또 굳이 RestFul하게 만들 필요가 없다. 
+3. 오히려 Spring MVC를 활용해서 구현하는 것이 알맞은 방법이다 (웹 어플리케이션만 제공하는데 REST API가 굳이 필요할까? + 심지어 템플릿 엔진만 사용하는 중이다)
+4. 내부에서 CSR이 필요한 경우에는 자체 API를 활용하면 되는 것이지, 불편하게 REST API를 구현할 필요는 없을 것 같다 (외부 시스템에서도 접근도 안하는데 굳이..?) 
+
+
 
